--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 WiFi Helpline - Alle rechten voorbehouden</p>
+        <p>&copy; 2025 WiFi Helpline - "Wie komt voor wifi, komt voor snelheid, altijd dichtbij!"</p>
     </footer>
 </body>
 </html>
